# api/swagger/swagger.yaml
@@ -5,7 +5,7 @@ info:
   description: API for Payments Backend Service
 # during dev, should point to your local machine
 # basePath prefixes all resource paths 
-basePath: /payments-service
+basePath: /payment-service
 # 
 schemes:
   # tip: remove http to make production-grade
@@ -22,23 +22,23 @@ tags:
   description: All Payments Endpoints
 paths:
   #--------------------------------------------------------Payments----------------------------------------------#
-  /payments:
+  /payments/authorizenet:
     # binds a127 app logic to a route
-    x-swagger-router-controller: index
+    x-swagger-router-controller: authorizeNetController
     post:
       tags:
         - Payments
-      description: Register Payments
+      description: Make payments from authorize.net provider
       # used as the method name of the controller
-      operationId: createCustomer
+      operationId: makePaymentFromAcceptMethod
       parameters: 
         - $ref: '#/parameters/Authorization'
         - name: data
           in: body
-          description: dynamic content of mail
+          description: request body for accept method
           required: true
           schema:
-            $ref: '#/definitions/SuccessResponse'
+            $ref: '#/definitions/AcceptMethodRequestBody'
       responses:
         "200":
           description: Success
@@ -70,8 +70,98 @@ parameters:
 definitions:
 
   #--------------------------------------------------Payments --------------------------------------#
+  Address:
+    properties:
+      address: 
+        type: "string"
+        example: "529 Mansarovar Plaza1212"
+      city: 
+        type: "string"
+        example: "Jaipur"
+      country: 
+        type: "string"
+        example: "India"
+      state: 
+        type: "string"
+        example: "Rajasthan"
+      zipCode: 
+        type: "string"
+        example: "3232"
+      addressType: 
+        type: "boolean"
+        example: false
+  AcceptMethodRequestBody:
+    properties: 
+      amount:
+        type: number
+        example: 23.99
+      currency:
+        type: string
+        example: USD
+      paymentTerms:
+        type: string
+        example: 'current'
+      paymentMethod:
+        type: string
+        example: 'CC'
+      billingAddress:
+        $ref: '#/definitions/Address'
+      shippingAddress:
+        $ref: '#/definitions/Address'
+      paymentReceiver:
+        properties:
+          id: 
+            type: string
+            example: '0XIO12903'
+          name: 
+            type: string
+            example: 'John Doe'
+      payer:
+        properties:
+          id: 
+            type: string
+            example: '909320'
+          name:
+            type: string
+            example: 'Jane Doe'
+      opaqueData:
+        properties: 
+          dataDescriptor: 
+            type: "string"
+            example: "COMMON.ACCEPT.INAPP.PAYMENT"
+          dataValue: 
+            type: "string"
+            example: "eyJjb2RlIjoiNTBfMl8wNjAwMDUzNUE1OTkzREQ1NEM1NzY0OTgwNTZDQzY5MEVBRjY5MTU3RjBEQThEMjU2N0EyQkUwMUNBNzQ5QkY0ODRDMTgyMjRGN0IzMEE4REI2MUJDQUI1NDMxMTZCNzkwOUM3OUMwIiwidG9rZW4iOiI5NTA3OTE3MzE1NTg5OTYzOTA0NjA0IiwidiI6IjEuMSJ9"
+        type: "object"
+      messages: 
+        required: 
+          - "resultCode"
+          - "message"
+        properties: 
+          statusCode: 
+            type: "string"
+            example: "I_WC_O1"
+          encryptedCardData:
+            properties: 
+              cardNumber: 
+                type: "string"
+                example: "XXXXXXXXXXXX1111"
+              expDate: 
+                type: "string"
+                example: "12/22"
+              bin: 
+                type: "string"
+                example: "411111"
+
   SuccessResponse:
     type: object
+    properties:
+      status:
+        type: string
+        example: 'PAYMENT_SUCCESS'
+      paymentId:
+        type: string
+        example: 'xy138032_pay'
     
   ErrorResponse:
     type: object
